# harper

./: .gitignore  AGENTS.md  AGENT_POLICY.md  AgeDescriptorHyphen.weir  Cargo.toml  DoIAdjective.weir  DoToDueTo.weir  Dockerfile  DoubleNegative.weir  Gemfile  GoggleBrand.weir  HowMach.weir  LeaveToFor.weir  README.md  TrueToWord.weir  VIBE.md  biome.json  check.ps1  comprises-of.weir  docker-compose.yml  edit1.py  gdocs.md  harper-sesh  justfile  output.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  random.txt  testing_strategy.md
.archive/: .gitignore  GERMAN_IMPROVEMENT_INSTRUCTIONS.md  fix_german_dict.py  fix_german_dict_conservative.py
.buildkite/: pipeline.yml  shared-pipeline-vars
.buildkite/commands/: build-desktop.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: binaries.yml  build_artifacts.yml  build_chrome_plugin.yml  build_harper_binaries.yml  build_web.yml  chrome_plugin.yml  desktop.yml  features.yml  just-checks.yml  just_checks.yml  package_vscode_plugin.yml  package_wp_plugin.yml  precommit.yml  release_chrome_plugin.yml  release_harper_binaries.yml  release_vscode_plugin.yml  release_wp_plugin.yml  stale.yml  vscode_plugin.yml  wp_plugin.yml
docs/: gnome-builder.md
docs/tests/: gnome-builder-doc-test.md
fastlane/: Fastfile
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_harper_yaml.rs
harper-api/: Cargo.toml
harper-api/src/: ew.txt  main.rs
harper-asciidoc/: Cargo.toml
harper-asciidoc/src/: lib.rs
harper-asciidoc/tests/: asciidoc_tests.rs
harper-brill/: Cargo.toml  build.rs  trained_brill_model.json  trained_chunker_model.json  trained_tagger_model.json
harper-brill/examples/: diagnose_lint_words.rs  eval_dev.rs  joint_determinism_check.rs  regenerate_english_joint.rs
harper-brill/finished_chunker/: model.mpk  vocab.json
harper-brill/finished_chunker_tiny/: model.mpk  vocab.json
harper-brill/finished_joint/: char_vocab.json  model.mpk  suffix_vocab.json
harper-brill/src/: freq_dict.rs  lib.rs  main.rs  upos.rs
harper-cli/: Cargo.toml
harper-cli/src/: annotate.rs  annotate_tokens.rs  corpus.rs  input.rs  input_helpers.rs  lint.rs  main.rs  prep.rs  prep_pattern.rs  prepositions.rs
harper-cli/tests/: corpus.rs  output_format.rs  version.rs  word_provenance.rs
harper-comments/: Cargo.toml
harper-comments/src/: comment_parser.rs
harper-comments/tests/: language_support.rs
harper-core/: Cargo.toml  README.md  affixes.json  annotations-portuguese.json  annotations.json  build.rs  default_config.json  dictionary copy.dict  dictionary-portuguese.dict  dictionary.dict  expr_linter_skeleton.rs  expr_linter_skeleton_commented.rs  irregular_nouns.json  irregular_verbs.json  new_dictionary.dict  proper_noun_rules.json  tojson.rb
harper-core/benches/: parse_essay.rs  spellcheck.rs
harper-core/build_lib/: language_config.rs  language_modules.rs  mod.rs  weir_rules.rs
harper-core/examples/: alloc_profile.rs
harper-core/src/: char_ext.rs  char_string.rs  dict_word_metadata.rs  dict_word_metadata_orthography.rs  document.rs  indefinite_article.rs  irregular_nouns.rs  irregular_verbs.rs  language_detection.rs  languages.rs  lexeme_metadata.rs  lexeme_metadata_orthography.rs  lib.rs  number.rs  punctuation.rs  range_enum.rs  render_markdown.rs  span.rs  thesaurus_helper.rs  title_case.rs  token.rs  token_kind.rs  token_string_ext.rs  word_metadata.rs
harper-desktop/: .gitignore  AGENTS.md  harper-desktop.key.pub  package.json  pnpm-lock.yaml  vite.config.js
harper-dictionary-wordlist/: Cargo.toml  README.md
harper-git-commit/: Cargo.toml
harper-git-commit/src/: lib.rs
harper-git-commit/tests/: run_tests.rs
harper-git-commit/tests/test_sources/: complex_verbose_commit.txt  conventional_commit.txt  markdown_body_commit.txt  simple_commit.txt
harper-html/: Cargo.toml
harper-ink/: Cargo.toml
harper-jjdescription/: Cargo.toml
harper-latex/: Cargo.toml
harper-latex/src/: lib.rs
harper-latex/tests/: run_tests.rs
harper-latex/tests/test_sources/: simple_document.tex
harper-literate-haskell/: Cargo.toml
harper-ls/: Cargo.toml
harper-pos-utils/: Cargo.toml
harper-pos-utils/examples/: probe_pos_probs.rs
harper-pos-utils/src/: annotator.rs  brill_tagger.rs  conllu_utils.rs  error_counter.rs  freq_dict.rs  lib.rs  patch.rs  patch_criteria.rs  upos.rs  word_counter.rs
harper-pos-utils/src/chunker/: burn_chunker.rs  cached_chunker.rs  mod.rs  np_extraction.rs  upos_freq_dict.rs
harper-pos-utils/src/chunker/brill_chunker/: mod.rs  patch.rs
harper-pos-utils/src/joint/: batch.rs  char_vocab.rs  eval.rs  inject.rs  mod.rs  model.rs  runtime.rs  suffix_vocab.rs  train.rs
harper-pos-utils/src/tagger/: brill_tagger.rs  error_counter.rs  freq_dict.rs  freq_dict_builder.rs  mod.rs
harper-pos-utils/src/tagger/brill_tagger/: mod.rs  patch.rs
harper-python/: Cargo.toml
harper-stats/: Cargo.toml
harper-tex/: Cargo.toml
harper-thesaurus/: Cargo.toml  build.rs
harper-tree-sitter/: Cargo.toml
harper-typst/: Cargo.toml
harper-wasm/: Cargo.toml  package.json
harper-yaml/: Cargo.toml
harper-zig/: Cargo.toml
harperAPI/: Cargo.toml  backup.txt
ripper/: Cargo.toml  clean.txt  queue.sh
scripts/: analyze_verb_conjugation.py  analyze_verbs.py  apply_verb_conversions.py  apply_verb_conversions_v2.py  cleanup_redundant.py  convert_e_plurals.py  convert_en_plurals.py  convert_er_umlaut_plurals.py  convert_s_plurals.py  convert_verb_forms.py  convert_verbs.py  convert_verbs_to_affixes.py  find_verb_stems.py  german_coverage.py  language_coverage.py  verb_conversion_detailed.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  highlighter_process.rs  highlighter_service.rs  lib.rs  mac_broker.rs  macos.rs  os_broker.rs  rect.rs
src-tauri/src/communication/: client.rs  message.rs  mod.rs  server.rs
src-tauri/src/highlighter/: error.rs  mod.rs  render_state.rs  window.rs  window_manager.rs
tools-to-classify-words/: get_properties_annotations.py  ox-parox-proparox.py
(+1371 files in other folders)
