[package]
name = "harper-git-commit"
version = "0.68.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "0.68.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "0.68.0" }
tree-sitter-gitcommit = { git = "https://github.com/gbprod/tree-sitter-gitcommit", rev = "a716678c0f00645fed1e6f1d0eb221481dbd6f6d" }
tree-sitter = "0.25.10"

[dev-dependencies]
paste = "1.0.15"
