[package]
name = "harper-pos-utils"
version = "2.5.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
rs-conllu = "0.3.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
is-macro = "0.3.7"
rand = { version = "0.10.1", optional = true }
burn = { version = "0.19.1", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.19.0", default-features = false }
serde_json = "1.0.150"
smallvec = "1.15.1"
lru = "0.18.0"
rayon = { version = "1.12.0", optional = true }

# burn-ndarray's explicit SIMD kernels (~1.8x faster cold inference) require the
# `simd` feature, which isn't no_std-clean in 0.19.1 and so also pulls in `std`.
# Gate both to native targets; the wasm32 build keeps the no_std scalar path.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn-ndarray = { version = "0.19.0", default-features = false, features = ["simd", "std"] }

[features]
default = []
training = ["dep:rand", "burn/train", "burn/autodiff"]
threaded = ["dep:rayon"]
