[package]
name = "harper-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30.13"
thiserror = "2.0.18"
egui = "0.34.1"
egui-winit = "0.34.1"
egui-wgpu = { version = "0.34.1", features = ["winit"] }
pollster = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
harper-core = { path = "../harper/harper-core" }
harper-dictionary-wordlist = { path = "../harper/harper-dictionary-wordlist" }
egui_commonmark = "0.23.0"
tokio = { version = "1.52.2", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2.0"
core-foundation = "0.10.1"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "libc",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSGeometry",
    "objc2-core-foundation",
] }
accessibility-sys = "0.2.0"
core-graphics = "0.25.0"
